--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   go_router: ^14.3.0
   flutter_riverpod: ^2.6.1
   freezed_annotation: ^2.4.4
-
+  speech_to_text: ^7.0.0
 
 dev_dependencies:
   flutter_test:
