--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   freezed_annotation: ^2.4.4
   speech_to_text: ^7.0.0
   permission_handler: ^11.3.1
+  installed_apps: ^1.5.2
 
 dev_dependencies:
   flutter_test:
