--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   speech_to_text: ^7.0.0
   permission_handler: ^11.3.1
   installed_apps: ^1.5.2
+  url_launcher: ^6.0.20
 
 dev_dependencies:
   flutter_test:
