--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     <queries>
         <intent>
             <action android:name="android.speech.RecognitionService" />
+            <action android:name="android.intent.action.TTS_SERVICE" />
         </intent>
     </queries>
 
