--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   permission_handler: ^11.3.1
   installed_apps: ^1.5.2
   url_launcher: ^6.0.20
+  flutter_tts: ^4.0.2
 
 dev_dependencies:
   flutter_test:
