--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   installed_apps: ^1.5.2
   url_launcher: ^6.0.20
   flutter_tts: ^4.0.2
+  dio: ^5.7.0
 
 dev_dependencies:
   flutter_test:
