--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   url_launcher: ^6.0.20
   flutter_tts: ^4.0.2
   dio: ^5.7.0
+  mesh_gradient: ^1.3.8
 
 dev_dependencies:
   flutter_test:
