--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_tts: ^4.0.2
   dio: ^5.7.0
   mesh_gradient: ^1.3.8
+  flutter_overlay_window: ^0.4.5
 
 dev_dependencies:
   flutter_test:
