--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,12 +39,15 @@ dependencies:
   flutter_riverpod: ^2.6.1
   freezed_annotation: ^2.4.4
   speech_to_text: ^7.0.0
-  permission_handler: ^11.3.1
+  permission_handler: ^10.4.5
   installed_apps: ^1.5.2
   url_launcher: ^6.0.20
   flutter_tts: ^4.0.2
   dio: ^5.7.0
   mesh_gradient: ^1.3.8
+  vosk_flutter: ^0.3.48
+  record: ^5.1.2
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
@@ -71,8 +74,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/models/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
