--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   vosk_flutter: ^0.3.48
   record: ^5.1.2
   path_provider: ^2.1.5
+  window_manager: ^0.4.3
 
 dev_dependencies:
   flutter_test:
