--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "cmake.sourceDirectory": "D:/a_gary/AndroidStudioProjects/viminsk_assistent/windows"
+    "cmake.sourceDirectory": "C:/project/flutter/Viminsk-Assistent/windows/flutter"
 }
