--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   record: ^5.1.2
   path_provider: ^2.1.5
   window_manager: ^0.4.3
+  contacts_service: ^0.6.3
 
 dev_dependencies:
   flutter_test:
