--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,10 @@ dependencies:
   path_provider: ^2.1.5
   window_manager: ^0.4.3
   contacts_service: ^0.6.3
+  intl: ^0.19.0
+  flutter_background_service: ^5.0.10
+  flutter_background_service_android: ^6.2.7
+  flutter_volume_controller: ^1.3.2
 
 dev_dependencies:
   flutter_test:
